[package]
name = "cpm2d"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[[bin]]
name = "sweep_rand_size"
path = "src/bin/sweep_rand_size.rs"

[[bin]]
name = "analyse"
path = "src/bin/analyse.rs"

[[bin]]
name = "analyze_sweep"
path = "src/bin/analyze_sweep.rs"

[[bin]]
name = "debug_mcs"
path = "src/bin/debug_mcs.rs"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
glob = "0.3.3"
rand_distr = "0.6.0"